@@ -33,13 +33,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
 /**
@@ -134,33 +132,23 @@ public class TestableSourceConnector extends SampleSourceConnector {
     @Override
     public ExactlyOnceSupport exactlyOnceSupport(Map<String, String> connectorConfig) {
         String supportLevel = connectorConfig.getOrDefault(CUSTOM_EXACTLY_ONCE_SUPPORT_CONFIG, "null").toLowerCase(Locale.ROOT);
-        switch (supportLevel) {
-            case EXACTLY_ONCE_SUPPORTED:
-                return ExactlyOnceSupport.SUPPORTED;
-            case EXACTLY_ONCE_UNSUPPORTED:
-                return ExactlyOnceSupport.UNSUPPORTED;
-            case EXACTLY_ONCE_FAIL:
-                throw new ConnectException("oops");
-            default:
-            case EXACTLY_ONCE_NULL:
-                return null;
-        }
+        return switch (supportLevel) {
+            case EXACTLY_ONCE_SUPPORTED -> ExactlyOnceSupport.SUPPORTED;
+            case EXACTLY_ONCE_UNSUPPORTED -> ExactlyOnceSupport.UNSUPPORTED;
+            case EXACTLY_ONCE_FAIL -> throw new ConnectException("oops");
+            default -> null;
+        };
     }
 
     @Override
     public ConnectorTransactionBoundaries canDefineTransactionBoundaries(Map<String, String> connectorConfig) {
         String supportLevel = connectorConfig.getOrDefault(CUSTOM_TRANSACTION_BOUNDARIES_CONFIG, TRANSACTION_BOUNDARIES_UNSUPPORTED).toLowerCase(Locale.ROOT);
-        switch (supportLevel) {
-            case TRANSACTION_BOUNDARIES_SUPPORTED:
-                return ConnectorTransactionBoundaries.SUPPORTED;
-            case TRANSACTION_BOUNDARIES_FAIL:
-                throw new ConnectException("oh no :(");
-            case TRANSACTION_BOUNDARIES_NULL:
-                return null;
-            default:
-            case TRANSACTION_BOUNDARIES_UNSUPPORTED:
-                return ConnectorTransactionBoundaries.UNSUPPORTED;
-        }
+        return switch (supportLevel) {
+            case TRANSACTION_BOUNDARIES_SUPPORTED -> ConnectorTransactionBoundaries.SUPPORTED;
+            case TRANSACTION_BOUNDARIES_FAIL -> throw new ConnectException("oh no :(");
+            case TRANSACTION_BOUNDARIES_NULL -> null;
+            default -> ConnectorTransactionBoundaries.UNSUPPORTED;
+        };
     }
 
     @Override
@@ -200,7 +188,7 @@ public class TestableSourceConnector extends SampleSourceConnector {
             taskHandle = RuntimeHandles.get().connectorHandle(connectorName).taskHandle(taskId);
             Map<String, Object> offset = Optional.ofNullable(
                     context.offsetStorageReader().offset(sourcePartition(taskId)))
-                    .orElse(Collections.emptyMap());
+                    .orElse(Map.of());
             startingSeqno = Optional.ofNullable((Long) offset.get("saved")).orElse(0L);
             seqno = startingSeqno;
             log.info("Started {} task {} with properties {}", this.getClass().getSimpleName(), taskId, props);
@@ -245,7 +233,7 @@ public class TestableSourceConnector extends SampleSourceConnector {
                             maybeDefineTransactionBoundary(record);
                             return record;
                         })
-                        .collect(Collectors.toList());
+                        .toList();
             }
             return null;
         }
@@ -305,10 +293,10 @@ public class TestableSourceConnector extends SampleSourceConnector {
     }
 
     public static Map<String, Object> sourcePartition(String taskId) {
-        return Collections.singletonMap("task.id", taskId);
+        return Map.of("task.id", taskId);
     }
 
     public static Map<String, Object> sourceOffset(long seqno) {
-        return Collections.singletonMap("saved", seqno);
+        return Map.of("saved", seqno);
     }
 }
