@@ -25,8 +25,6 @@ import org.apache.kafka.common.errors.ElectionNotNeededException;
 import org.apache.kafka.common.errors.TimeoutException;
 import org.apache.kafka.common.utils.Exit;
 import org.apache.kafka.common.utils.Utils;
-import org.apache.kafka.server.common.AdminCommandFailedException;
-import org.apache.kafka.server.common.AdminOperationException;
 import org.apache.kafka.server.util.CommandDefaultOptions;
 import org.apache.kafka.server.util.CommandLineUtils;
 import org.apache.kafka.server.util.Json;
@@ -42,7 +40,6 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -95,7 +92,7 @@ public class LeaderElectionCommand {
         Optional<Integer> partitionOption = Optional.ofNullable(commandOptions.getPartition());
         final Optional<Set<TopicPartition>> singleTopicPartition =
             (topicOption.isPresent() && partitionOption.isPresent()) ?
-                Optional.of(Collections.singleton(new TopicPartition(topicOption.get(), partitionOption.get()))) :
+                Optional.of(Set.of(new TopicPartition(topicOption.get(), partitionOption.get()))) :
                 Optional.empty();
 
         /* Note: No need to look at --all-topic-partitions as we want this to be null if it is use.
@@ -104,10 +101,15 @@ public class LeaderElectionCommand {
          */
         Optional<Set<TopicPartition>> topicPartitions = jsonFileTopicPartitions.or(() -> singleTopicPartition);
 
-        Properties props = new Properties();
+        String commandConfigFile;
         if (commandOptions.hasAdminClientConfig()) {
-            props.putAll(Utils.loadProps(commandOptions.getAdminClientConfig()));
+            System.out.println("Option --admin.config has been deprecated and will be removed in a future version. Use --command-config instead.");
+            commandConfigFile = commandOptions.getAdminClientConfig();
+        } else {
+            commandConfigFile = commandOptions.getCommandConfig();
         }
+        Properties props = (commandConfigFile != null) ? Utils.loadProps(commandConfigFile) : new Properties();
+
         props.setProperty(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, commandOptions.getBootstrapServer());
         if (!props.containsKey(AdminClientConfig.DEFAULT_API_TIMEOUT_MS_CONFIG)) {
             props.setProperty(AdminClientConfig.DEFAULT_API_TIMEOUT_MS_CONFIG, Integer.toString((int) timeoutMs.toMillis()));
@@ -245,7 +247,9 @@ public class LeaderElectionCommand {
 
     static class LeaderElectionCommandOptions extends CommandDefaultOptions {
         private final ArgumentAcceptingOptionSpec<String> bootstrapServer;
+        @Deprecated(since = "4.2", forRemoval = true)
         private final ArgumentAcceptingOptionSpec<String> adminClientConfig;
+        private final ArgumentAcceptingOptionSpec<String> commandConfig;
         private final ArgumentAcceptingOptionSpec<String> pathToJsonFile;
         private final ArgumentAcceptingOptionSpec<String> topic;
         private final ArgumentAcceptingOptionSpec<Integer> partition;
@@ -263,9 +267,17 @@ public class LeaderElectionCommand {
             adminClientConfig = parser
                 .accepts(
                     "admin.config",
-                    "Configuration properties files to pass to the admin client")
+                    "(DEPRECATED) Configuration properties files to pass to the admin client. " +
+                    "This option will be removed in a future version. Use --command-config instead.")
                 .withRequiredArg()
                 .describedAs("config file")
+                .ofType(String.class);
+            commandConfig = parser
+                .accepts(
+                    "command-config",
+                    "Config properties file to pass to the admin client.")
+                .withRequiredArg()
+                .describedAs("Config file")
                 .ofType(String.class);
             pathToJsonFile = parser
                 .accepts(
@@ -325,6 +337,10 @@ public class LeaderElectionCommand {
             return options.valueOf(adminClientConfig);
         }
 
+        public String getCommandConfig() {
+            return options.valueOf(commandConfig);
+        }
+
         public String getTopic() {
             return options.valueOf(topic);
         }
@@ -347,8 +363,10 @@ public class LeaderElectionCommand {
                 throw new AdminCommandFailedException("Missing required option(s): " + String.join(", ", missingOptions));
             }
 
+            CommandLineUtils.checkInvalidArgs(parser, options, adminClientConfig, commandConfig);
+
             // One and only one is required: --topic, --all-topic-partitions or --path-to-json-file
-            List<AbstractOptionSpec<?>> mutuallyExclusiveOptions = Arrays.asList(
+            List<AbstractOptionSpec<?>> mutuallyExclusiveOptions = List.of(
                 topic,
                 allTopicPartitions,
                 pathToJsonFile
